更新图片资源

--- a/project.config.json
+++ b/project.config.json
@@ -1,49 +1,1 @@
-{
-    "setting": {
-        "urlCheck": true,
-        "es6": true,
-        "postcss": true,
-        "minified": true,
-        "newFeature": true,
-        "autoCompile": true,
-        "compileHotReLoad": true,
-        "nativeCompile": true
-    },
-    "appid": "tt5e5928e4c169a38502",
-    "projectname": "kk象棋残局",
-    "douyinProjectType": "native",
-    "condition": {
-        "game": {
-            "current": 1709708514235,
-            "list": [
-                {
-                    "id": 1709708514235,
-                    "name": "021002",
-                    "query": "",
-                    "scene": "021002",
-                    "launchFrom": "scan",
-                    "location": "",
-                    "mockUpdateType": "Noupdate"
-                },
-                {
-                    "id": 1709717706927,
-                    "name": "021001",
-                    "query": "",
-                    "scene": "021001",
-                    "launchFrom": "setting_page",
-                    "location": "recently",
-                    "mockUpdateType": "Noupdate"
-                },
-                {
-                    "id": 1710913178569,
-                    "name": "我的小程序侧边栏",
-                    "query": "",
-                    "scene": "021036",
-                    "launchFrom": "game_room",
-                    "location": "game_list",
-                    "mockUpdateType": "Noupdate"
-                }
-            ]
-        }
-    }
-}
+{"setting":{"urlCheck":true,"es6":true,"postcss":true,"minified":true,"newFeature":true,"autoCompile":true,"compileHotReLoad":true,"nativeCompile":true},"appid":"tt5e5928e4c169a38502","projectname":"kk象棋残局","douyinProjectType":"native","condition":{"game":{"current":1709708514235,"list":[{"id":1709708514235,"name":"021002","query":"","scene":"021002","launchFrom":"scan","location":"","mockUpdateType":"Noupdate"},{"id":1709717706927,"name":"021001","query":"","scene":"021001","launchFrom":"setting_page","location":"recently","mockUpdateType":"Noupdate"},{"id":1710913178569,"name":"我的小程序侧边栏","query":"","scene":"021036","launchFrom":"game_room","location":"game_list","mockUpdateType":"Noupdate"}]}}}
